# gitwp

./: README.md  action.yml  gitwp-migrations.php  log  pyproject.toml
.github/workflows/: nextrelease.yml  test-action.yml
docker/: Dockerfile  gitwp-entrypoint.sh  test
gitwp/: cli.py
proxy/: Dockerfile  nginx.conf
proxy/certs/: fhd_wildcard.crt
proxy/gencerts/: fhd_ca.crt  fhd_ca.key  fhd_ca.srl  fhd_wildcard.csr  fhd_wildcard.key  generate.sh  v3.ext
scripts/: format  test
tests/full/: .gitignore  gitwp.yml
tests/full/site/wp-content/themes/barebones/: 404.php  archive.php  footer.php  functions.php  header.php  index.php  page.php  search.php  sidebar.php  single.php  style.css
